@@ -1,3 +1,7 @@
+2011-05-18  Daiki Ueno  <ueno@unixuser.org>
+
+	* basic.c (check_pubkey_crypt): Remove unused "unpad" flag.
+
 2011-05-11  Daiki Ueno  <ueno@unixuser.org>
 
 	* basic.c (check_pubkey_sign): Add an OAEP flag parsing test case.
